Fitness_Chart/templates/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-http-route
  namespace: fitness-app
spec:
  parentRefs:
    - name: fitness-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fitness-active  # ArgoCD will ensure this points to the "Live" version
          port: 80
